[package]
name = "goldsrc_diag_overlay"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = [
    "minwindef",
    "windef",
    "ntdef",
    "winnt",
    "libloaderapi",
    "processthreadsapi",
    "handleapi",
    "wingdi",
    "winuser",
    "psapi",
    "memoryapi",
    "winnt",
] }
minhook-sys = "0.1.1"
once_cell = "1.21.3"

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
